--- a/Lesson3/Lesson3/Lesson3.csproj
+++ b/Lesson3/Lesson3/Lesson3.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Task1\" />
+  </ItemGroup>
+
 </Project>
