--- a/Lesson4/Factory/Factory.csproj
+++ b/Lesson4/Factory/Factory.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Factory\Factory.csproj" />
+    <ProjectReference Include="..\Building\Constructions.csproj" />
     <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
